Docs overhaul: modernize, restructure, and document the codegen pipeline
- New docs/README-CODEGEN.md: the textproto -> C pipeline — edit rules,
  the pixel-based string length limits enforced by the build, jar
  class-version pinning, native-JVM vs qemu performance, determinism
  notes, and the poisoned-header failure mode + recovery recipe
- Root README: rewritten and streamlined — broader terminology (any
  Linux sandbox/CI/PC), current build-time expectations (-j3, ~20 min,
  native-JDK codegen), eliteredux-source branch workflow documented
- README-SETUP: restructured — the historical flat-package mapping table
  collapsed to a line, packaging notes condensed and de-personalized,
  session logs distilled to their lessons, gotchas extended with the
  codegen length-checker, musl LD_LIBRARY_PATH asymmetry, and
  kotlinc-on-17 (with -Xmx4g) findings
- docs/README.md: index + reading order updated for the new guide